MODIFICASION DEL FONDO

--- a/html/listado-medicos.html
+++ b/html/listado-medicos.html
@@ -43,7 +43,7 @@
     </main>
     <footer>
         <h2>Realizado por:</h2>
-        <p>Grupo 1 desarrollo web backend</p>
+        <p>cristopher</p>
     </footer>
     <script src="../app.js"></script>
 </body>
