--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </main>
         <footer>
             <h2>Realizado por:</h2>
-            <p>Grupo 1 desarrollo web backend</p>
+            <p>cristopher</p>
         </footer>
     </div>
 </body>
